Update for test to bologna